odevzdani/tests/invalid_sem/def/def10.java
class Main {
    static int b;
    static double b;
}
